// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content blanks 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="bg-yellow-200"
  >
    ________________
  </span>,
  "?",
]
`;

exports[`Content examples 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="bg-green-200"
  >
    San Jose
  </span>,
  "?",
]
`;

exports[`Content input w/ prompts 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="inline-flex flex-col leading-none"
  >
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
    <label
      className="self-center text-sm"
    >
      [place]
    </label>
  </span>,
  "?",
]
`;

exports[`Content input w/o prompts 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="inline-flex flex-col leading-none"
  >
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
  </span>,
  "?",
]
`;

exports[`Content prompts 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="bg-blue-200"
  >
    [place]
  </span>,
  "?",
]
`;
